clusters/on-prem-k3s-cluster/apps/omv/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: omv-external
  namespace: omv
subsets:
  - addresses:
    - ip: ${OMV_IP}
    ports:
    - port: 80
