clusters/on-prem-k3s-cluster/apps/omv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omv-external
  namespace: omv
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
