clusters/on-prem-k3s-cluster/apps/omv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omv-ingress
  namespace: omv
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: omv.local.alexdevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omv-external
            port:
              number: 80
